# cas-msed-transferarbeit

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build-pdf.yml  poc-ci.yml
poc/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  docker-compose.yml  plan.md  poc.md  pyproject.toml
poc/apps/: research.md
poc/apps/chatbot/: pyproject.toml
poc/apps/chatbot/src/chatbot/: __init__.py  main.py
poc/apps/chatbot/tests/: test_main.py
poc/apps/mcp_server/: pyproject.toml
poc/apps/mcp_server/data/: .gitignore  Jahresbericht21_SRF-DS.csv
poc/apps/mcp_server/data/raw/: .gitignore
poc/apps/mcp_server/src/mcp_server/: __init__.py  config.py  logging.py  main.py
poc/apps/mcp_server/src/mcp_server/contracts/: __init__.py  catalog.yaml  catalog_models.py  models.py  policy.yaml  policy_models.py  query_template.schema.json
poc/apps/mcp_server/src/mcp_server/services/: __init__.py  executor_duckdb.py  loaders.py  planner.py  response_builder.py  validator.py
poc/apps/mcp_server/src/mcp_server/tools/: __init__.py  get_catalog.py  query_data.py
poc/apps/mcp_server/src/tools/: download_data.py  load_jahresbericht.py  transform_jahresbericht.py
poc/apps/mcp_server/tests/: test_logging.py  test_mcp_server.py  test_planner.py  test_policy_enforcement.py  test_response_builder.py  test_validator.py
poc/apps/meteo_chatbot/: pyproject.toml
poc/apps/meteo_chatbot/src/meteo_chatbot/: main.py
poc/apps/meteo_mcp_server/: SRFWeather-OpenApi3.yaml  pyproject.toml  response_1678970781928.json  updated_plan.md
poc/apps/meteo_mcp_server/src/meteo_mcp_server/: config.py  logging.py  main.py
poc/apps/meteo_mcp_server/src/meteo_mcp_server/services/: auth.py  meteo_client.py
poc/apps/meteo_mcp_server/src/meteo_mcp_server/tools/: get_forecast.py  search_location.py
poc/docker/: .env.example  docker-compose.meteo.yml
poc/docker/chatbot/: Dockerfile
poc/docker/mcp_server/: Dockerfile
poc/docker/meteo_chatbot/: Dockerfile
poc/docker/meteo_mcp_server/: Dockerfile
thesis/: build.sh  convert-svg-to-png.sh  generate_charts.py  main.adoc  main.tex  references.bib  theme.yml  thesis.md
thesis/config/: config.adoc
thesis/text/: abstract.adoc  conclusion.adoc  dictionary.adoc  introduction.adoc  methods.adoc  results.adoc
