[project]
name = "meteo-chatbot"
version = "0.1.0"
description = "Web chatbot for SRF Meteo API"
requires-python = ">=3.14"
dependencies = [
    "gradio>=5.0.0",
    "openai>=2.0.0",
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meteo_chatbot"]
