[project]
name = "meteo-mcp-server"
version = "0.1.0"
description = "MCP Server for SRF Meteo API"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.0",
    "mcp>=1.0.0",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meteo_mcp_server"]
